@@ -1,33 +1,31 @@
-package day11;
+package common;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
-class Coordinate {
+public class Coordinate {
 
-    int x;
-    int y;
+    private int x;
+    private int y;
 
     public Coordinate(final int x, final int y) {
         this.x = x;
         this.y = y;
     }
 
-    Set<Coordinate> neighboursInMap(final Integer[][] map) {
+    public Set<Coordinate> neighboursInMap(final Integer[][] map) {
         final List<Integer> xValues =
                 IntStream.rangeClosed(x - 1, x + 1)
                         .filter(i -> i >= 0 && i < map[0].length)
-                        .boxed().collect(Collectors.toList());
+                        .boxed().toList();
         final List<Integer> yValues =
                 IntStream.rangeClosed(y - 1, y + 1)
                         .filter(i -> i >= 0 && i < map.length)
                         .boxed()
-                        .collect(Collectors.toList());
+                        .toList();
         final Set<Coordinate> neighbourhood = new HashSet<>();
         for (int yi : yValues) {
             for (int xi : xValues) {
@@ -37,6 +35,35 @@ class Coordinate {
             }
         }
         return neighbourhood;
+    }
+
+    public Set<Coordinate> orthogonalNeighboursInMap(final Integer[][] map) {
+        final List<Integer> xValues =
+                IntStream.of(x - 1, x + 1)
+                        .filter(i -> i >= 0 && i < map[0].length)
+                        .boxed().toList();
+        final List<Integer> yValues =
+                IntStream.of(y - 1, y + 1)
+                        .filter(i -> i >= 0 && i < map.length)
+                        .boxed()
+                        .toList();
+        final Set<Coordinate> neighbourhood = new HashSet<>();
+        for (int yi : yValues) {
+            neighbourhood.add(new Coordinate(x, yi));
+        }
+        for (int xi : xValues) {
+            neighbourhood.add(new Coordinate(xi, y));
+        }
+
+        return neighbourhood;
+    }
+
+    public Coordinate rightNeighbour() {
+        return new Coordinate(this.x + 1, this.y);
+    }
+
+    public Coordinate bottomNeighbour() {
+        return new Coordinate(this.x, this.y + 1);
     }
 
     @Override
@@ -64,4 +91,11 @@ class Coordinate {
                 ')';
     }
 
+    public int xValue() {
+        return x;
+    }
+
+    public int yValue() {
+        return y;
+    }
 }
